--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-pdf/renderer": "^4.1.6",
     "@supabase/supabase-js": "^2.39.7",
     "date-fns": "^3.6.0",
+    "framer-motion": "^11.18.0",
     "git": "^0.1.5",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.344.0",
