--- a/package.json
+++ b/package.json
@@ -5,19 +5,26 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "server": "cd email-server && nodemon server.js",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "node server.js"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@react-pdf/renderer": "^4.1.6",
     "@supabase/supabase-js": "^2.39.7",
+    "cors": "^2.8.5",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "framer-motion": "^11.18.0",
     "git": "^0.1.5",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.344.0",
+    "nodemailer": "^6.9.1",
+    "nodemon": "^3.1.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
@@ -41,5 +48,18 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2"
-  }
+  },
+  "main": "eslint.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hazimzaman/new-invoices.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/hazimzaman/new-invoices/issues"
+  },
+  "homepage": "https://github.com/hazimzaman/new-invoices#readme",
+  "description": ""
 }
