--- a/email-server/package.json
+++ b/email-server/package.json
@@ -6,13 +6,15 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "@types/multer": "^1.4.12",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
     "nodemon": "^3.1.9"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
   }
-} 
+}
