--- a/.env
+++ b/.env
@@ -3,3 +3,8 @@ VITE_SUPABASE_URL=https://yshtlvhqpqsjybnakrnf.supabase.co
 ZOHO_USER=hazimzaman@primocreators.com
 ZOHO_PASS=(Byebye123)@
 PORT=3001
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=465
+SMTP_USER=your_gmail@gmail.com
+SMTP_PASS=your_app_specific_password
+SMTP_FROM=your_gmail@gmail.com
