--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@heroicons/react": "^2.2.0",
     "@react-pdf/renderer": "^4.1.6",
     "@supabase/supabase-js": "^2.39.7",
@@ -27,6 +28,7 @@
     "nodemon": "^3.1.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^5.0.0",
     "react-hot-toast": "^2.5.1",
     "react-router-dom": "^6.22.2",
     "recharts": "^2.15.0",
